--- a/public/assets/css/candidates.css
+++ b/public/assets/css/candidates.css
@@ -107,7 +107,7 @@ section {
 .standard-btn:hover {
     filter: brightness(110%);
 }
-.modal-body input[type="text"] {
+.modal-body :is(input[type="text"], input[type="number"]) {
     background: none !important;
     outline: none;
     box-shadow: 5px 5px 5px var(--border-blk);
@@ -115,6 +115,10 @@ section {
     border-radius: 10px;
     padding: 5px 10px;
     transition: 0.4s;
+}
+.modal-body input[type="number"]::-webkit-inner-spin-button,
+.modal-body input[type="number"]::-webkit-outer-spin-button {
+    display: none;
 }
 .modal-body input[type="text"]:focus {
     transform: scale(1.02);
@@ -171,4 +175,39 @@ section {
 .fa-solid.fa-trash {
     margin: 0 0 0 1ch;
     color: rgba(255, 0, 0, 0.822);
+}
+.candidate-img {
+    border-radius: 20px;
+    max-width: 5rem;
+    aspect-ratio: 1/1;
+    width: 100%;
+    object-fit: cover;
+}
+.enlarged-image-container {
+    z-index: 10;
+    width: 100vw;
+    height: 100vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    backdrop-filter: blur(5px);
+}
+.enlarged-image {
+    position: relative;
+}
+.close-button {
+    z-index: 11;
+    font-weight: 550;
+    background: none;
+    border: none;
+    font-size: 25px;
+    color: rgba(255, 0, 0, 0.400);
+    transition: 0.3s;
+}
+.close-button:hover {
+    color: rgba(255, 0, 0, 0.904);
+    transform: scale(1.2);
+}
+.all_tables img {
+    box-shadow: 0px 0px 5px rgb(0 0 0 / 0.3);
 }
