--- a/public/assets/css/categories.css
+++ b/public/assets/css/categories.css
@@ -1,18 +1,17 @@
-
 :root {
     --border-blk: rgb(0 0 0 / 0.3);
     --label: 13px;
     --shadow-standard: 0px 0px 10px var(--border-blk);
-    --primary-100:#26A69A;
-    --primary-200:#408d86;
-    --primary-300:#cdfaf6;
-    --accent-100:#80CBC4;
-    --accent-200:#43A49B;
-    --text-100:#263339;
-    --text-200:#728f9e;
-    --bg-100:#E0F2F1;
-    --bg-200:#D0EBEA;
-    --bg-300:#FFFFFF;
+    --primary-100: #26a69a;
+    --primary-200: #408d86;
+    --primary-300: #cdfaf6;
+    --accent-100: #80cbc4;
+    --accent-200: #43a49b;
+    --text-100: #263339;
+    --text-200: #728f9e;
+    --bg-100: #e0f2f1;
+    --bg-200: #d0ebea;
+    --bg-300: #ffffff;
 }
 
 .standard-btn {
@@ -39,37 +38,35 @@ main {
     justify-content: center;
     background: var(--bg-100);
     border-radius: 10px;
-    box-shadow: 0px 0px 10px ;
+    box-shadow: 0px 0px 10px;
     padding: 2% 6%;
     margin: 1rem 3rem;
 }
 .categoryContainer {
-    width: 100%;
     display: flex;
-    align-items: center;
-    justify-content: center;
+    flex-direction: column;
     gap: 1rem;
+    align-items: center;
 }
-.categoryContainer input {
-    width: calc(100% - 1rem);
-}
-.round-data-parent{
+.round-data-parent {
     background: var(--accent-100);
     box-shadow: 0px 0px 5px rgb(0 0 0 / 0.3);
-
     border-radius: 10px;
     padding: 2% 6%;
     width: 100%;
     gap: 1rem;
-
+    display: flex;
+    gap: 1rem;
 }
 .second-form {
+    width: 50%;
     border-radius: 10px;
     box-shadow: 0px 0px 10px rgb(0 0 0 / 0.3);
     padding: 2% 6%;
     background: #e3e3e3;
 }
-.catName-sec, .catVal-sec {
+.catName-sec,
+.catVal-sec {
     white-space: nowrap;
     width: 100%;
     padding: 2% 6%;
@@ -82,13 +79,25 @@ main {
 .select-sec {
     text-align: center;
 }
+.select-sec select {
+    /* outline: 1px solid var(--accent-100); */
+    padding: 1% 2%;
+    background: none;
+    border: 2px solid var(--primary-100);
+    border-radius: 5px;
+}
+.select-sec option {
+    background: var(--primary-300);
+    box-shadow: 5px 5px 8px rgb(0 0 0/0.3);
+}
 .cstm-box {
     position: relative;
 }
 .cstm-box input {
     z-index: 10;
+    width: 100%;
     padding: 2% 4%;
-    border: 1px solid #000;
+    border: 2px solid var(--primary-100);
     border-radius: 5px;
     background: none;
     outline: none;
@@ -100,15 +109,15 @@ main {
     pointer-events: none;
     transition: 0.6s;
 }
-.cstm-box input:valid ~label,
-.cstm-box input:focus ~label {
+.cstm-box input:valid ~ label,
+.cstm-box input:focus ~ label {
     z-index: 11;
     transform: translateY(-25px);
 }
-.catVal-sec input::-webkit-inner-spin-button, 
+.catVal-sec input::-webkit-inner-spin-button,
 .catVal-sec input::-webkit-outer-spin-button {
     display: none;
-} 
+}
 .all_tables {
     width: 100%;
     border-collapse: collapse;
@@ -127,10 +136,9 @@ main {
 .all_tables thead {
     background: var(--bg-100);
 }
-.all_tables thead td{
+.all_tables thead td {
     border: 2px solid var(--primary-200);
     font-weight: 700;
-
 }
 .all_tables th {
     font-weight: bold;
@@ -151,4 +159,136 @@ main {
     top: 0%;
     right: 27%;
     transform: translate(-50%, -50%);
+}
+.data-table-down {
+    display: grid;
+    align-items: start;
+    grid-template-columns: 1fr 1fr;
+    margin: 1rem 0 0;
+    padding: 2% 6%;
+    width: 100%;
+    background: var(--accent-100);
+    border-radius: 10px;
+    box-shadow: 0px 0px 5px rgb(0 0 0 / 0.3);
+}
+.data-table-down .edit {
+    color: var(--text-100);
+    transition: 0.3s;
+}
+.data-table-down .edit:hover {
+    color: rgba(28, 137, 3, 0.878);
+}
+.data-table-down .delete {
+    color: rgba(193, 32, 32, 0.686);
+    transition: 0.3s;
+}
+.data-table-down .delete:hover {
+    color: rgba(193, 32, 32, 0.946);
+}
+.third-form {
+    background: #e3e3e3;
+    width: 50%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+.modal {
+    display: none; 
+    position: fixed;
+    z-index: 1; 
+    left: 0;
+    top: 0;
+    width: 100%; 
+    height: 100%; 
+    overflow: auto;
+    background-color: rgba(0, 0, 0, 0.4); 
+}
+
+.modal-content {
+    position: relative;
+    background-color: #fefefe;
+    margin: 15% auto; 
+    padding: 20px;
+    border: 1px solid #888;
+    width: 80%;
+    max-width: 600px;
+}
+
+.close {
+    position: absolute;
+    top: 1rem;
+    right: 2rem;
+    color: #aaa;
+    font-size: 28px;
+    font-weight: bold;
+    cursor: pointer;
+}
+
+.close:hover,
+.close:focus {
+    color: black;
+    text-decoration: none;
+    cursor: pointer;
+}
+.edit-frm {
+    display: grid;
+    place-items: center;
+}
+.edit-frm input {
+    background: none;
+    outline: none;
+    border: none;
+    width: auto;
+    text-align: center;
+    max-width: 10rem;
+    min-width: 3rem;
+}
+.td-wtform {
+    position: relative;
+}
+.td-wtform i {
+    color: rgba(28, 137, 3, 0.745);
+}
+.td-wtform input[type="number"]::-webkit-inner-spin-button,
+.td-wtform input[type="number"]::-webkit-outerer-spin-button {
+    display: none;
+}
+.edit-frm button {
+    opacity: 0;
+    position: absolute;
+    top: 50%;
+    right: 3%;
+    transition: 0.2s;
+    background: none;
+    border: none;
+    outline: none;
+    transition: 0.3s ease-in-out;
+}
+.edit-frm button:hover {
+    transform: scale(1.5);
+}
+.edit-frm input:focus ~button {
+    top: 5%;
+    opacity: 1;
+}
+.dialogue {
+    position: relative;
+    display: flex;
+    flex-direction: column;
+}
+.dialogue span {
+    font-weight: 500;
+    position: absolute;
+    top: 0%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    opacity: 0;
+    background: rgba(254, 254, 254, 0.887);
+    padding: 5px 10px;
+    border-radius: 5px;
+    transition: 0.3s ease-in-out;
+}
+.dialogue i:hover ~span {
+    opacity: 1;
 }
