--- a/public/assets/css/categories.css
+++ b/public/assets/css/categories.css
@@ -42,10 +42,13 @@ main {
     padding: 2% 6%;
     margin: 1rem 3rem;
 }
+
 .categoryContainer {
     display: flex;
     flex-direction: column;
-    gap: 1rem;
+    justify-content: center;
+    align-items: center;
+    gap: 1.5rem;
     align-items: center;
 }
 .round-data-parent {
@@ -56,10 +59,28 @@ main {
     width: 100%;
     gap: 1rem;
     display: flex;
+    justify-content: center;
     gap: 1rem;
 }
+.backbtn {
+    position: absolute;
+    top: 2%;
+    left: 2%;
+    font-size: 20px;
+}
+.criteriabtn {
+    position: absolute;
+    top: 2%;
+    right: 2%;
+}
+.criteriabtn a {
+    text-decoration: none;
+    color: rgba(254, 254, 254, 0.887);
+}
+.backbtn a {
+    color: #fff;
+}
 .second-form {
-    width: 50%;
     border-radius: 10px;
     box-shadow: 0px 0px 10px rgb(0 0 0 / 0.3);
     padding: 2% 6%;
@@ -95,7 +116,6 @@ main {
 }
 .cstm-box input {
     z-index: 10;
-    width: 100%;
     padding: 2% 4%;
     border: 2px solid var(--primary-100);
     border-radius: 5px;
@@ -241,7 +261,7 @@ main {
     border: none;
     width: auto;
     text-align: center;
-    max-width: 10rem;
+    max-width: 6rem;
     min-width: 3rem;
 }
 .td-wtform {
@@ -258,7 +278,7 @@ main {
     opacity: 0;
     position: absolute;
     top: 50%;
-    right: 3%;
+    right: 10%;
     transition: 0.2s;
     background: none;
     border: none;
@@ -291,4 +311,34 @@ main {
 }
 .dialogue i:hover ~span {
     opacity: 1;
+}
+/* delete confirmation */
+#confirmationDialog {
+    display: none;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+    z-index: 9999;
+}
+
+.confirmationContent {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background-color: #fff;
+    padding: 20px;
+    border-radius: 4px;
+    text-align: center;
+}
+
+.confirmationButtons {
+    margin-top: 20px;
+}
+
+.confirmationButtons button {
+    margin: 0 10px;
 }
