--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -171,3 +171,38 @@ h2 {
    font-family: 'Gill Sans', 'Gill Sans MT';
    font-size: 40px;
 }
+
+/*  dropdown */
+.dropdown-btn {
+    position: relative;
+    display: inline-block;
+    background-color: #fff;
+    color: #000;
+    border: none;
+    padding: 10px;
+    cursor: pointer;
+}
+
+.dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #f9f9f9;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+    z-index: 1;
+}
+
+.dropdown-content a {
+    color: #000;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+}
+
+.dropdown-content a:hover {
+    background-color: #f1f1f1;
+}
+
+.dropdown-btn:hover .dropdown-content {
+    display: block;
+}
