--- a/public/assets/css/criteria.css
+++ b/public/assets/css/criteria.css
@@ -24,11 +24,11 @@ main {
     justify-content: center;
     flex-direction: column;
     padding: var(--blncd-spacing);
+    gap: 1rem;
 }
 .section-one {
     position: relative;
     background: var(--bg-100);
-    width: calc(100% - 2rem);
     height: 100%;
     padding: 2% 6%;
     display: flex;
@@ -36,6 +36,7 @@ main {
     flex-direction: column;
     align-items: center;
     box-shadow: var(--shadow-standard);
+    border-radius: 10px;
 }
 .criteriaContainer {
     display: flex;
@@ -138,8 +139,11 @@ main {
     margin: 20px 0;
     cursor: pointer;
     box-shadow: var(--shadow-standard);
+    white-space: nowrap;
 }
-
+.th-border {
+    border: 1px solid var(--primary-100);
+}
 .all_tables th,
 .all_tables td {
     padding: 12px 15px;
@@ -167,4 +171,36 @@ main {
 }
 .all_tables tbody tr:hover {
     filter: brightness(110%);
+}
+/* .fig-box {
+    width: 100%;
+    padding: 2% 6%;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+}
+.second-section {
+    width: 100%;
+    background: var(--bg-200);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    border-radius: 10px;
+    box-shadow: var(--shadow-standard);
+} */
+.second-section {
+    display: grid;
+    grid-template-columns: 1fr;
+    text-align: center;
+
+}
+.fig-box table {
+    max-width: 40%;
+}
+.fig-box {
+    display: flex;
+    gap: 1rem;
+    align-items: start;
+    justify-content: center;
+    width: 100%;
 }
