--- a/public/assets/css/candidates.css
+++ b/public/assets/css/candidates.css
@@ -2,23 +2,16 @@
     --border-blk: rgb(0 0 0 / 0.3);
     --label: 13px;
     --shadow-standard: 0px 0px 10px var(--border-blk);
-    --primary-100:#26A69A;
-    --primary-200:#408d86;
-    --primary-300:#cdfaf6;
-    --accent-100:#80CBC4;
-    --accent-200:#43A49B;
-    --text-100:#263339;
-    --text-200:#728f9e;
-    --bg-100:#E0F2F1;
-    --bg-200:#D0EBEA;
-    --bg-300:#FFFFFF;
 }
 
-
+.__candidates- {
+    background: var(--bg-200);
+}
 section {
     position: relative;
     padding: 10px;
     margin: 2% 6%;
+    border-radius: 10px;
     background: var(--bg-200);
     box-shadow: 0px 0px 10px var(--border-blk);
 }
