--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -2,8 +2,8 @@
     margin: 0;
     padding: 0;
     font-family: sans-serif;
-}
 
+}
 .hero {
     height: 100%;
     width: 100%;
@@ -13,7 +13,12 @@
     position: absolute;
 
 }
-
+.loginpage {
+    background: url(/assets/images/crownbg.jpg);
+    background-position: center;
+    background-size: cover;
+    height: 100vh;
+}
 .form-box {
     width: 380px;
     height: 340px;
@@ -206,3 +211,4 @@ h2 {
 .dropdown-btn:hover .dropdown-content {
     display: block;
 }
+
