--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -1,215 +1,3 @@
-/* * {
-    margin: 0;
-    padding: 0;
-    font-family: sans-serif;
-
-}
-.hero {
-    height: 100%;
-    width: 100%;
-    background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url(/storage/img/bg6.webp);
-    background-position: center;
-    background-size: cover;
-    position: absolute;
-
-}
-.loginpage {
-    background: url(/assets/images/crownbg.jpg);
-    background-position: center;
-    background-size: cover;
-    height: 100vh;
-}
-.form-box {
-    width: 380px;
-    height: 340px;
-    position: relative;
-    margin: 6% auto;
-    background: #fff;
-    padding: 5px;
-    border-radius: 12px;
-}
-
-.button-box {
-    width: 220px;
-    margin: 35px auto;
-    position: relative;
-    box-shadow: 0 0 20px 9px #ff61241f;
-    border-radius: 30px;
-}
-
-#btn {
-    top: 0;
-    left: 0;
-    position: absolute;
-    width: 110px;
-    height: 100%;
-    background: linear-gradient(to right, #ff105f ,#ffad06);
-    border-radius: 30px;
-    transition: .5s;
-}
-
-.input-group {
-    top: 150px;
-    position: absolute;
-    width: 280px;
-    transition: .5s;
-}
-
-.input-field {
-    width: 100%;
-    padding: 10px 0;
-    margin: 10px 0;
-    border-left: 0;
-    border-top: 0;
-    border-right: 0;
-    border-bottom: 1px solid #999;
-    outline: none;
-    background: transparent;
-}
-
-.submit-btn {
-    
-    padding: 10px 30px;
-    cursor: pointer;
-    display: block;
-    margin: 15px auto;
-    background: linear-gradient(to right, #ff105f ,#ffad06);
-    border: 0;
-    outline: none;
-    border-radius: 30px;
-}
-
-.ch-box {
-    margin: 30px 10px 30px 0;
-}
-
-span {
-    color: #777;
-    font-size: 12px;
-    bottom: 68px;
-    position: absolute;
-}
-
-#login {
-    left: 50px;
-
-}
-
-#register {
-    left: 450px;
-    
-}
-
-
-.error-message {
-    color: red;
-    font-size: 12px;
-    margin: 5px auto;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    font-family: sans-serif;
-
-}
-
-#loader-container {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-color: rgba(0, 0, 0, 0.503);
-    display: none;
-    justify-content: center;
-    align-items: center;
-    z-index: 9999;
-  }
-  
-  #loader {
-    border: 8px solid #f3f3f3;
-    border-top: 8px solid #db3477;
-    border-radius: 50%;
-    width: 30px;
-    height: 30px;
-    animation: spin 1s linear infinite;
-  }
-  
-  @keyframes spin {
-    0% {
-      transform: rotate(0deg);
-    }
-
-    50% {
-        transform: rotate(180deg);
-      }
-
-    100% {
-      transform: rotate(360deg);
-    }
-  }
- 
-  
-  
-
-  header {
-   
-    margin: -100px 0 35px 0;
-    display: flex;
-    align-items: start;
-    justify-content: flex-start;
-   
-}
-
-header img {
-    max-width: 80px;
-    height: 60px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    border-radius: 50%;
-   
-}
-
-h2 {
-   margin: 7px 0 0 20px;
-   font-family: 'Gill Sans', 'Gill Sans MT';
-   font-size: 40px;
-}
-
-.dropdown-btn {
-    position: relative;
-    display: inline-block;
-    background-color: #fff;
-    color: #000;
-    border: none;
-    padding: 10px;
-    cursor: pointer;
-}
-
-.dropdown-content {
-    display: none;
-    position: absolute;
-    background-color: #f9f9f9;
-    min-width: 160px;
-    box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
-    z-index: 1;
-}
-
-.dropdown-content a {
-    color: #000;
-    padding: 12px 16px;
-    text-decoration: none;
-    display: block;
-}
-
-.dropdown-content a:hover {
-    background-color: #f1f1f1;
-}
-
-.dropdown-btn:hover .dropdown-content {
-    display: block;
-} */
-
 * {
     margin: 0;
     padding: 0;
@@ -219,28 +7,46 @@ h2 {
 .hero {
     height: 100%;
     width: 100%;
-    background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url(bg6.webp);
+    background-image: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)),
+        url(bg6.webp);
     background-position: center;
     background-size: cover;
     position: absolute;
-
 }
 
+.loginpage__ {
+    background: linear-gradient(
+            rgba(241, 239, 122, 0.646),
+            rgba(246, 246, 244, 0.464),
+            rgba(232, 138, 219, 0.579)
+        ),
+        url(/assets/images/crownbg.jpg);
+    background-position: center;
+    background-size: cover;
+    height: 100vh;
+}
 .form-box {
     width: 380px;
     height: 480px;
     position: relative;
     margin: 6% auto;
-    background: #fff;
+    background: transparent;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.3);
+    backdrop-filter: blur(5px);
+    border-radius: 10px;
     padding: 5px;
     overflow: hidden;
+    display: flex;
+    align-items: start;
+    justify-content: center;
 }
 
 .button-box {
-    width: 220px;
-    margin: 35px auto;
+    margin: 1rem 0 0 ;
+    display: flex;
+    place-items: center;
     position: relative;
-    box-shadow: 0 0 20px 9px #ff61241f;
+    box-shadow: 0px 0px 10px rgb(0 0 0 / 0.3);
     border-radius: 30px;
 }
 
@@ -251,37 +57,24 @@ h2 {
     border: 0;
     outline: none;
     position: relative;
-
+}
+.toggle-btn a {
+    border: 1px solid #000;
+    padding: 10px 30px;
+    text-decoration: none;
+    color: #000;
 }
 
 #btn {
-    top: 0;
-    left: 0;
-    position: absolute;
-    width: 110px;
-    height: 100%;
-    background: linear-gradient(to right, #ff105f ,#ffad06);
     border-radius: 30px;
-    transition: .5s;
-}
-
-.social-icons {
-    margin: 30px auto;
-    text-align: center;
-}
-
-.social-icons img {
-    width: 30px;
-    margin: 0 12px;
-    box-shadow: 0 0 20px 0 #7f7f7f3d;
-    cursor: pointer; 
+    transition: 0.5s;
 }
 
 .input-group {
-    top: 180px;
+    top: 80px;
     position: absolute;
     width: 280px;
-    transition: .5s;
+    transition: 0.5s;
 }
 
 .input-field {
@@ -295,21 +88,20 @@ h2 {
     outline: none;
     background: transparent;
 }
+.input-field::placeholder {
+    color: #000;
+}
 
 .submit-btn {
     width: 85%;
     padding: 10px 30px;
     cursor: pointer;
     display: block;
-    margin: auto;
-    background: linear-gradient(to right, #ff105f ,#ffad06);
+    margin: 2rem auto 0;
+    background: linear-gradient(to right, #ff105f, #ffad06);
     border: 0;
     outline: none;
     border-radius: 30px;
-}
-
-.ch-box {
-    margin: 30px 10px 30px 0;
 }
 
 span {
@@ -318,18 +110,6 @@ span {
     bottom: 68px;
     position: absolute;
 }
-
-#login {
-    left: 50px;
-
-}
-
-#register {
-    left: 450px;
-    
-}
-
-/*error*/
 .error-message {
     color: red;
     font-size: 12px;
@@ -338,77 +118,13 @@ span {
     justify-content: center;
     align-items: center;
     font-family: sans-serif;
-
 }
-
-/*loader*/
-#loader-container {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-color: rgba(0, 0, 0, 0.503);
-    display: none;
-    justify-content: center;
-    align-items: center;
-    z-index: 9999;
-  }
-  
-  #loader {
-    border: 8px solid #f3f3f3;
-    border-top: 8px solid #db3477;
-    border-radius: 50%;
-    width: 30px;
-    height: 30px;
-    animation: spin 1s linear infinite;
-  }
-  
-  @keyframes spin {
-    0% {
-      transform: rotate(0deg);
-    }
-
-    50% {
-        transform: rotate(180deg);
-      }
-
-    100% {
-      transform: rotate(360deg);
-    }
-  }
- 
-  
-  
-
-  header {
-   
-    margin: -100px 0 35px 0;
+header {
     display: flex;
     align-items: start;
-    justify-content: flex-start;
-   
-}
-
-header img {
-    max-width: 80px;
-    height: 60px;
-    display: flex;
     justify-content: center;
-    align-items: center;
-    border-radius: 50%;
-   
+    margin: 0 0 1rem ;
 }
-
-h2 {
-   margin: 7px 0 0 20px;
-   font-family: 'Gill Sans', 'Gill Sans MT';
-   font-size: 40px;
+header img {
+    max-width: 150px;
 }
-
-#login, #register {
-    transition: 0.6s;
-}
-
-
-
