--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -27,7 +27,7 @@
 }
 .form-box {
     width: 380px;
-    height: 480px;
+    height: 380px;
     position: relative;
     margin: 6% auto;
     background: transparent;
@@ -46,8 +46,9 @@
     display: flex;
     place-items: center;
     position: relative;
-    box-shadow: 0px 0px 10px rgb(0 0 0 / 0.3);
+    /* box-shadow: 0px 0px 10px rgb(0 0 0 / 0.3); */
     border-radius: 30px;
+    gap: .5rem;
 }
 
 .toggle-btn {
@@ -84,7 +85,7 @@
     border-left: 0;
     border-top: 0;
     border-right: 0;
-    border-bottom: 1px solid #999;
+    border-bottom: 1px solid #fffbfb;
     outline: none;
     background: transparent;
 }
@@ -93,15 +94,19 @@
 }
 
 .submit-btn {
-    width: 85%;
+    width: 65%;
     padding: 10px 30px;
     cursor: pointer;
     display: block;
     margin: 2rem auto 0;
-    background: linear-gradient(to right, #ff105f, #ffad06);
+    background: linear-gradient(to right, #eaabc0c8, #f269a9);
     border: 0;
     outline: none;
     border-radius: 30px;
+}
+.submit-btn:hover {
+    background: #777;
+    color: #ffff;
 }
 
 span {
@@ -131,12 +136,13 @@ header img {
 }
 
 .toggle-btn {
-    /* Add your default button styles here */
-    background-color: pink;
+    background-color: rgba(243, 178, 194, 0.9);
     border-radius: 12px;
+    
   }
   
   .toggle-btn.active {
-    background-color: red; /* Example: Set the active button's background color to red */
+    background-color: rgba(72, 68, 68, 0.875); 
+    color: #ffff;
   }
   
