--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -94,8 +94,8 @@
 }
 
 .submit-btn {
-    width: 65%;
-    padding: 10px 30px;
+    width: 50%;
+    padding: 15px 20px;
     cursor: pointer;
     display: block;
     margin: 2rem auto 0;
@@ -137,14 +137,14 @@ header img {
 }
 
 .toggle-btn {
-    background-color: rgba(72, 68, 68, 0.875); 
+    background-color: rgba(72, 68, 68, 0.753); 
     border-radius: 12px;
-    color: #ffff;
+    color: #ffffff93;
     
   }
   
   .toggle-btn.active {
-    background-color: rgba(243, 178, 194, 0.9);
-    color: #000;
+    background: linear-gradient(to right, #eaabc0c8, #f269a9);
+    color: #000000;
   }
   
