--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -106,7 +106,7 @@
     transition: 0.3s ease-in-out;
 }
 .submit-btn:hover {
-    background: #777;
+    background: #010101c8;
     color: #ffff;
 }
 
