--- a/public/assets/css/judge.css
+++ b/public/assets/css/judge.css
@@ -11,7 +11,7 @@
     box-sizing: border-box;
 }
 :root {
-    /* --primary-100:#FFA07A;
+   --primary-100:#FFA07A;
     --primary-200:#de835f;
     --primary-300:#f8ece6;
     --accent-100:#FFC0CB;
@@ -20,17 +20,7 @@
     --text-200:#5c5c5c;
     --bg-100:#F5E6CC;
     --bg-200:#ebdcc2;
-    --bg-300:#c2b49b; */
-    --primary-100:#BFBFBF;
-    --primary-200:#a2a2a2;
-    --primary-300:#616161;
-    --accent-100:#D4AF37;
-    --accent-200:#6c5400;
-    --text-100:#333333;
-    --text-200:#5c5c5c;
-    --bg-100:#EAEAEA;
-    --bg-200:#e0e0e0;
-    --bg-300:#b8b8b8;
+    --bg-300:#c2b49b;
 }
 
 body {
@@ -69,10 +59,12 @@ body {
     border-radius: 10px;
     display: flex;
     flex-direction: column;
+    gap: 1rem;
     align-items: start;
     padding: 1% 3%;
     white-space: nowrap;
     overflow-y: scroll;
+    transition: 0.2s;
 }
 .logo {
     width: calc(100% - 6rem);
@@ -123,12 +115,23 @@ body {
     box-shadow: 0px 0px 10px rgb(0 0 0 / 0.3);
     width: 100%;
     text-align: center;
+    padding: 3px;
+}
+.tevol input {
+    max-width: 50%;
+    text-align: center;
+    outline: none;
+    border: none;
+    background: rgba(223, 123, 221, 0.194);
 }
 .tevol thead {
     background: var(--bg-100);
 }
 .tevol thead th {
     border: 1px solid var(--primary-100);
+    font-size: 14px;
+    padding: 2px 4px;
+    background: var(--accent-100);
 }
 .rounds {
     margin: 5rem 0 0;
@@ -141,4 +144,40 @@ body {
 }
 .rounds ul li a {
     text-decoration: none;
+}
+.table-fig  {
+    text-align: center;
+    padding: 2% 6%;
+    border-radius: 10px;
+    background: rgba(251, 250, 250, 0.41);
+    box-shadow: 0px 0px 10px rgb( 0 0 0 / 0.3);
+}
+.tbl-btn   {
+    width: 100%;
+    margin: 1rem 0 0;
+    display: flex;
+    justify-content: end;
+}
+.tbl-btn  button {
+    padding: 4px 8px;
+    background: var(--accent-100);
+    border: none;
+    cursor: pointer;
+    box-shadow: 0px 0px 5px rgb( 0 0 0 / 0.3);
+    transition: 0.3s;
+}
+.tbl-btn  button:hover {
+    transform: scale(1.01);
+    background: var(--accent-200);
+    box-shadow: 5px 5px 5px rgb( 0 0 0 / 0.5);
+    color: #fff;
+}
+.cat-name {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 1rem;
+}
+.round-name {
+    font-size: 20spx;
 }
