23/06 3:07 save and display score

--- a/public/assets/css/judge.css
+++ b/public/assets/css/judge.css
@@ -182,3 +182,8 @@ body {
 .round-name {
     font-size: 20spx;
 }
+
+.tevol input::-webkit-inner-spin-button, 
+.tevol input::-webkit-outer-spin-button {
+    display: none;
+}
