--- a/public/assets/css/core.css
+++ b/public/assets/css/core.css
@@ -1,32 +1,39 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
 
 * {
     padding: 0;
     margin: 0;
     box-sizing: border-box;
-    font-family: 'Poppins', sans-serif;
+    font-family: "Poppins", sans-serif;
     color: var(--text-100);
     scroll-behavior: smooth;
 }
-* ::before, * ::after {
+* ::before,
+* ::after {
     box-sizing: border-box;
 }
 :root {
-    --primary-100:#FFA07A;
-    --primary-200:#de835f;
-    --primary-300:#f8ece6;
-    --accent-100:#FFC0CB;
-    --accent-200:#99616c;
-    --text-100:#333333;
-    --text-200:#5c5c5c;
-    --bg-100:#F5E6CC;
-    --bg-200:#ebdcc2;
-    --bg-300:#c2b49b;
-    --vue-primary: #409EFF;
-    --vue-success: #67C23A;
-    --vue-warning: #E6A23C;
-    --vue-danger: #F56C6C;
+    --primary-100: #ffa07a;
+    --primary-200: #de835f;
+    --primary-300: #f8ece6;
+    --accent-100: #ffc0cb;
+    --accent-200: #99616c;
+    --text-100: #333333;
+    --text-200: #5c5c5c;
+    --bg-100: #f5e6cc;
+    --bg-200: #ebdcc2;
+    --bg-300: #c2b49b;
+    --vue-primary: #409eff;
+    --vue-success: #67c23a;
+    --vue-warning: #e6a23c;
+    --vue-danger: #f56c6c;
     --vue-info: #909399;
+    --shadow-insetfx: rgba(0, 0, 0, 0.17) 0px -23px 25px 0px inset,
+        rgba(0, 0, 0, 0.15) 0px -36px 30px 0px inset,
+        rgba(0, 0, 0, 0.1) 0px -79px 40px 0px inset,
+        rgba(0, 0, 0, 0.06) 0px 2px 1px, rgba(0, 0, 0, 0.09) 0px 4px 2px,
+        rgba(0, 0, 0, 0.09) 0px 8px 4px, rgba(0, 0, 0, 0.09) 0px 16px 8px,
+        rgba(0, 0, 0, 0.09) 0px 32px 16px;
 }
 .__login_page section {
     height: 100vh;
@@ -38,7 +45,7 @@
     aspect-ratio: 1 / 1; */
     border-radius: 10px;
 }
-.nav-links li{
+.nav-links li {
     list-style: none;
     margin: 0 0 1rem;
 }
@@ -53,7 +60,7 @@
     color: var(--text-100);
 }
 .nav-links li a::after {
-    content: '';
+    content: "";
     background: var(--primary-100);
     display: block;
     margin: auto;
@@ -61,7 +68,7 @@
     width: 0%;
     transition: 0.5s;
 }
-.nav-links li a:hover::after{
+.nav-links li a:hover::after {
     width: 100%;
 }
 .offcanvas {
@@ -104,8 +111,6 @@
     font-size: 10px;
 }
 
-
-
 .off-canvas-footer {
     display: flex;
     justify-content: center;
@@ -128,9 +133,8 @@
     background: var(--bg-200);
     box-shadow: 0px 5px 10px rgb(0 0 0 /0.3);
 }
-.nav-links .active, 
-.nav-links .exception 
- {
+.nav-links .active,
+.nav-links .exception {
     padding: 2px 10px;
     background: rgba(255, 255, 255, 0.3);
     box-shadow: 5px 5px 10px rgb(0 0 0 /0.3);
@@ -155,11 +159,11 @@
     color: var(--primary-100);
 }
 
-
 /*  RESULTS */
 .results-body {
     --padding: 20px;
     padding: var(--padding);
+    background: var(--bg-100);
 }
 .results-main {
     border-radius: 10px;
@@ -168,4 +172,64 @@
     background: var(--bg-100);
     height: calc(97vh - var(--padding));
     overflow-y: scroll;
+    box-shadow: 0px 0px 10px rgb(0 0 0 / 0.3);
+}
+#score-table-container {
+    position: relative;
+    display: flex;
+    flex-wrap: wrap;
+    text-overflow: balance;
+    align-items: center;
+    justify-content: center;
+    gap: 1rem;
+}
+#score-table-container h3 {
+    position: absolute;
+    top: 0%;
+    left: 50%;
+    translate: -50% -50%;
+}
+
+.score-card {
+    margin: 2rem 0 0;
+    width: 20rem;
+    padding: 0 2%;
+    min-height: 18rem;
+    height: 100%;
+    border-top: 1px solid rgb(0 0 0 / 0.1);
+    border-radius: 10px;
+    box-shadow: var(--shadow-insetfx);
+    cursor: pointer;
+    transition: 0.2s;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+}
+.score-card:hover {
+    transform: scale(1.1);
+    z-index: 3;
+}
+.score-card :is(h5, th) {
+    text-align: center;
+}
+.score-card thead {
+    text-align: center;
+}
+.score-card-parent {
+    display: flex;
+    flex-direction: row;
+}
+.score-table {
+    white-space: nowrap;
+    width: 100%;
+    box-shadow: 0px 0px 3px rgb(0 0 0 / 0.3);
+}
+.score-table :is(thead, tbody){
+    padding: 3% 5%;
+}
+.score-table  :is(thead, tbody tr) {
+    border: 1px solid rgb(0 0 0 / 0.3);
+}
+.score-table thead {
+    background: var(--accent-100);
 }
