--- a/public/assets/css/core.css
+++ b/public/assets/css/core.css
@@ -160,6 +160,7 @@
 }
 
 /*  RESULTS */
+/*  RESULTS */
 .results-body {
     --padding: 20px;
     padding: var(--padding);
@@ -172,9 +173,67 @@
     background: var(--bg-100);
     height: calc(97vh - var(--padding));
     overflow-y: scroll;
-<<<<<<< HEAD
+    box-shadow: 0px 0px 10px rgb(0 0 0 / 0.3);
+}
+#score-table-container {
+    position: relative;
+    display: flex;
+    flex-wrap: wrap;
+    text-overflow: balance;
+    align-items: center;
+    justify-content: center;
+    gap: 1rem;
+}
+#score-table-container h3 {
+    position: absolute;
+    top: 0%;
+    left: 50%;
+    translate: -50% -50%;
 }
 
+.score-card {
+    margin: 2rem 0 0;
+    width: 20rem;
+    padding: 0 2%;
+    min-height: 18rem;
+    height: 100%;
+    border-top: 1px solid rgb(0 0 0 / 0.1);
+    border-radius: 10px;
+    box-shadow: var(--shadow-insetfx);
+    cursor: pointer;
+    transition: 0.2s;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+}
+.score-card:hover {
+    transform: scale(1.1);
+    z-index: 3;
+}
+.score-card :is(h5, th) {
+    text-align: center;
+}
+.score-card thead {
+    text-align: center;
+}
+.score-card-parent {
+    display: flex;
+    flex-direction: row;
+}
+.score-table {
+    white-space: nowrap;
+    width: 100%;
+    box-shadow: 0px 0px 3px rgb(0 0 0 / 0.3);
+}
+.score-table :is(thead, tbody){
+    padding: 3% 5%;
+}
+.score-table  :is(thead, tbody tr) {
+    border: 1px solid rgb(0 0 0 / 0.3);
+}
+.score-table thead {
+    background: var(--accent-100);
+}
 
 /*loader*/
 .loader-container {
@@ -301,66 +360,3 @@
       opacity: 1;
     }
   }
-=======
-    box-shadow: 0px 0px 10px rgb(0 0 0 / 0.3);
-}
-#score-table-container {
-    position: relative;
-    display: flex;
-    flex-wrap: wrap;
-    text-overflow: balance;
-    align-items: center;
-    justify-content: center;
-    gap: 1rem;
-}
-#score-table-container h3 {
-    position: absolute;
-    top: 0%;
-    left: 50%;
-    translate: -50% -50%;
-}
-
-.score-card {
-    margin: 2rem 0 0;
-    width: 20rem;
-    padding: 0 2%;
-    min-height: 18rem;
-    height: 100%;
-    border-top: 1px solid rgb(0 0 0 / 0.1);
-    border-radius: 10px;
-    box-shadow: var(--shadow-insetfx);
-    cursor: pointer;
-    transition: 0.2s;
-    display: flex;
-    justify-content: center;
-    flex-direction: column;
-}
-.score-card:hover {
-    transform: scale(1.1);
-    z-index: 3;
-}
-.score-card :is(h5, th) {
-    text-align: center;
-}
-.score-card thead {
-    text-align: center;
-}
-.score-card-parent {
-    display: flex;
-    flex-direction: row;
-}
-.score-table {
-    white-space: nowrap;
-    width: 100%;
-    box-shadow: 0px 0px 3px rgb(0 0 0 / 0.3);
-}
-.score-table :is(thead, tbody){
-    padding: 3% 5%;
-}
-.score-table  :is(thead, tbody tr) {
-    border: 1px solid rgb(0 0 0 / 0.3);
-}
-.score-table thead {
-    background: var(--accent-100);
-}
->>>>>>> 7c4989cfcd93e1fc3f3ab4b8022030ee727890b3
